# scylla-cdc-rust

./: .gitignore  Cargo.toml  README.md  tutorial.md
.github/workflows/: rust.yml
docs/: rust-instructions.md
scylla-cdc/: Cargo.toml
scylla-cdc-printer/: Cargo.toml
scylla-cdc-printer/src/: main.rs  printer.rs
scylla-cdc-replicator/: Cargo.toml
scylla-cdc-replicator/src/: main.rs  replication_tests.rs  replicator.rs  replicator_consumer.rs
scylla-cdc-test-utils/: Cargo.toml
scylla-cdc-test-utils/src/: lib.rs
scylla-cdc/src/: cdc_types.rs  checkpoints.rs  consumer.rs  e2e_tests.rs  lib.rs  log_reader.rs  reader.rs  stream_generations.rs  stream_reader.rs  test_utilities.rs
