[package]
name = "scylla-cdc-printer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scylla = { git = "https://github.com/scylladb/scylla-rust-driver" }
scylla-cdc = { version = "0.1.0", path = "../scylla-cdc" }
tokio = { version = "1.1.0", features = ["full"] }
chrono = "0.4.19"
futures = "0.3.17"
anyhow = "1.0.51"
async-trait = "0.1.52"
clap = { version = "3.1.10", features = ["derive"] }
