[package]
name = "scylla-cdc-replicator"
version = "0.1.4"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scylla = "1.3.1"
scylla-cdc = { version = "0.4.1", path = "../scylla-cdc" }
tokio = { version = "1.1.0", features = ["full"] }
async-trait = "0.1.51"
anyhow = "1.0.48"
itertools = "0.13.0"
uuid = { version = "1.0.0", features = ["v1"] }
futures-util = "0.3.19"
tracing = "0.1.34"
chrono = "0.4.19"
clap = { version = "4.5.9", features = ["derive"] }
thiserror = "2.0"

[dev-dependencies]
scylla-cdc-test-utils = { path = "../scylla-cdc-test-utils" }
rstest = "0.26.1"
