[package]
name = "scylla-cdc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.48"
scylla = { git = "https://github.com/scylladb/scylla-rust-driver" }
tokio = { version = "1.1.0", features = ["rt", "io-util", "net", "time", "macros", "sync"] }
chrono = "0.4.19"
futures = "0.3.17"
uuid = "1.0.0"
num_enum = "0.5.4"
async-trait = "0.1.51"
tracing = "0.1.31"
itertools = "0.10.3"
hex = "0.4.3"

[dev-dependencies]
hex = "0.4.3"
