[package]
name = "scylla-cdc"
version = "0.1.0"
edition = "2021"
description = "Library for consuming ScyllaDB CDC log for Rust"
repository = "https://github.com/scylladb/scylla-cdc-rust"
readme = "../README.md"
keywords = ["database", "scylla", "cdc"]
categories = ["database"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.48"
scylla = "0.8.1"
tokio = { version = "1.1.0", features = ["rt", "io-util", "net", "time", "macros", "sync"] }
chrono = "0.4.19"
futures = "0.3.17"
uuid = {version = "1.0.0", features = ["v1"]}
num_enum = "0.5.4"
async-trait = "0.1.51"
tracing = "0.1.31"
itertools = "0.10.3"
hex = "0.4.3"

[dev-dependencies]
hex = "0.4.3"
rand = "0.8.5"
scylla-cdc-test-utils = { path = "../scylla-cdc-test-utils" }
# To compile one of the doc tests, we need rt-multi-thread feature.
tokio = { version = "1.1.0", features = ["rt", "io-util", "net", "time", "macros", "sync", "rt-multi-thread"] }